Fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
 h1,
 h2,
 h3 {
-  text-align: center;
   margin: 0;
 }
 
@@ -31,7 +30,6 @@ h3 {
 p {
   font-size: 18px;
   line-height: 1.5;
-  text-align: center;
 }
 
 .navigation-links {
